--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -19,6 +19,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuracion<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li><%= link_to "Proveedor", suppliers_path %></a></li>
+          <li><%= link_to "Remitos", invoices_path %></li>
         </ul>
 
         <li><%= link_to "Remitos", invoices_path %></li>
