--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,16 +1,21 @@
 <div class="col-md-12 line">
-   <div class=" col-md-1">
-      <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
-   </div>
-   <div class="col-md-2">
-      <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control"}  %>
-   </div>
-   <div class=" col-md-1">
-      <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
-   </div>
-   <div class="col-md-1">
-         <%= f.hidden_field :_destroy %>
-      <%= button_to "Eliminar", '#', class: "remove_fields_orders btn btn-danger form-control" %>
-   </div>
+
+  <div class="col-md-4">
+    <%= f.autocomplete_field :name, autocomplete_article_name_orders_path, :article_id => 'article_id'   %> 
+    <%= f.input :quantity_stock, as: :hidden , label: false%>
+  </div>
+  <div class=" col-md-1">
+    <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
+  </div>
+  <div class="col-md-2">
+    <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control"}  %>
+  </div>
+  <div class=" col-md-1">
+    <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
+  </div>
+  <div class="col-md-1">
+    <%= f.hidden_field :_destroy %>
+    <%= button_to "Eliminar", '#', class: "remove_fields_orders btn btn-danger form-control" %>
+  </div>
 
 </div>
