--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,14 +1,22 @@
-<div class="col-md-12 line">
+<div class="col-md-12 line2">
 
   <div class="col-md-4">
-    <%= f.autocomplete_field :name, autocomplete_article_name_orders_path, :article_id => 'article_id'   %> 
-    <%= f.input :quantity_stock, as: :hidden , label: false%>
+        <%= f.input( :name, label: false,  input_html: {
+                 class: 'form-control ',
+                 data: {'autocomplete-field' => true,
+                        'autocomplete-for' => '#invoice_orders_#{id}_article_id',
+                        'autocomplete-url' => articles_path(format: :json)
+              } 
+              }) %>
+         <%= f.input :article_id, :input_html => {class: 'form-control'}, as: :hidden , label: false%>
+              <%= f.input :quantity_stock, as: :hidden , label: false%>
+
   </div>
   <div class=" col-md-1">
     <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
   </div>
   <div class="col-md-2">
-    <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control"}  %>
+    <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control price_unit "}  %>
   </div>
   <div class=" col-md-1">
     <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
