--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -22,7 +22,8 @@
           <li><%= link_to "Remitos", invoices_path %></li>
         </ul>
 
-        <li><%= link_to "Remitos", invoices_path %></li>
+        <li><%= link_to "Remitos", new_invoice_path %></li>
+        <li><%= link_to "Caja Diaria", invoices_path %></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
