--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,14 +8,7 @@
     </button>
   </div>
 </div>
-<div>
-  <% if flash[:error] %>
-    <li class="alert alert-error"><%= flash[:error]  %></li>
-<% end %>
-  <% if notice %>
-    <li class="alert alert-success"><%= notice  %></li>
-<% end %>
-</div>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
@@ -35,40 +28,49 @@
 
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+      <div>
+        <% if flash[:error] %>
+          <li class="alert alert-error"><%= flash[:error]  %></li>
+      <% end %>
+        <% if notice %>
+          <li class="alert alert-success"><%= notice  %></li>
+      <% end %>
+      </div>
       <h1 class="page-header">Listado de Articulos</h1>
 
       <div class="table-responsive">
         <%= will_paginate @articles %>
         <% if @articles %>
+          <div class="table-responsive">
           <table class="table table-striped">
-          <thead>
-            <tr>
-
-              <th>#</th>
-              <th>Nombre</th>
-              <th>Proveedor</th>
-              <th>Pricio Publico</th>
-              <th>Stock</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-          <tbody>
-          <tr>
-
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Proveedor</th>
+                <th>Pricio Publico</th>
+                <th>Stock</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
             <% @articles.each do |article| %>
+              <tr>
 
               <td><%= article.id %></td>
-            <td><%= article.name %></td>
-            <td><%= article.supplier_id %></td>
-            <td><%= article.price_total %></td>
-            <td><%= article.quantity %></td>
-            <td><%= link_to 'Show', article %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-          </tr>
-          </tbody>
-        </table>
+              <td><%= article.name %></td>
+              <td><%= article.supplier_id %></td>
+              <td><%= number_to_currency(article.price_total) %></td>
+              <td><%= article.quantity %></td>
+              <td><%= link_to 'Show', article %></td>
+              <td><%= link_to 'Edit', edit_article_path(article) %></td>
+              <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
+            <% end %>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       <% end %>
       </div>
       <%= link_to 'Nuevo Articulo', new_article_path %>
