--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-12 line2">
+<div class="col-md-12">
 
   <div class="col-md-4">
         <%= f.input( :name, label: false,  input_html: {
@@ -8,8 +8,7 @@
                         'autocomplete-url' => articles_path(format: :json)
               } 
               }) %>
-         <%= f.input :article_id, :input_html => {class: 'form-control'}, as: :hidden , label: false%>
-              <%= f.input :quantity_stock, as: :hidden , label: false%>
+         <%= f.input :article_id, :input_html => {class: 'form-control'} , as: :hidden, label: false%>
 
   </div>
   <div class=" col-md-1">
