--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Listing invoices</h1>
+<h1>Listado de Remitos</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Customer</th>
-      <th>Price total</th>
+      <th>#</th>
+      <th>Fecha</th>
+      <th>Precio</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +13,9 @@
   <tbody>
     <% @invoices.each do |invoice| %>
       <tr>
-        <td><%= invoice.customer_id %></td>
-        <td><%= invoice.price_total %></td>
+        <td><%= invoice.id %></td>
+        <td><%= l(invoice.created_at) %></td>
+        <td><%= number_to_currency(invoice.price_total) %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -23,5 +25,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Invoice', new_invoice_path %>
