--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -20,11 +20,15 @@
         <div class="col-md-12 line2 panel-body">
           <%= f.fields_for :orders, method: 'get' do |ph| %>
             <%=render 'orders', f: ph  %>
-          <div>
-            <%=link_to_add_fields 'Agregar  Producto', f , :orders %><% end %>
-          </div>
 
-      </div> 
+
+          <div>
+            <%=link_to_add_fields 'Agregar  Producto', f , :orders %>
+
+          </div>
+        <% end %>
+
+        </div> 
       </div>
       <div class ="total_1 pull-right h2">
         <h2> Total</h2>
