--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+ <div class="col-md-12 line2">
 
   <div class="col-md-4">
         <%= f.input( :name, label: false,  input_html: {
