--- a/app/views/invoice_stocks/index.html.erb
+++ b/app/views/invoice_stocks/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing invoice_stocks</h1>
+<h1>Listado Remitos </h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nombre</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Invoice stock', new_invoice_stock_path %>
+<%= link_to 'Nuevo Remito', new_invoice_stock_path %>
