--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing suppliers</h1>
+<h1>Listado de Proveedores</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Address</th>
+      <th>Nombre</th>
+      <th>Domicilio</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Supplier', new_supplier_path %>
+<%= link_to 'Nuevo Proveedor', new_supplier_path %>
