--- a/app/views/invoice_stocks/_form.html.erb
+++ b/app/views/invoice_stocks/_form.html.erb
@@ -20,6 +20,7 @@
         <div class=" col-md-12  panel-heading">
           <div class="col-md-4 text-center">Producto</div>
           <div class="col-md-2 text-center">Cantidad</div>
+          <div class="col-md-2 text-center">Fecha Vto</div>
           <div class="col-md-2 text-center">Proveedor</div>
         </div>
 
