--- a/app/views/invoice_stocks/show.html.erb
+++ b/app/views/invoice_stocks/show.html.erb
@@ -1,9 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nombre:</strong>
   <%= @invoice_stock.name %>
 </p>
 
-<%= link_to 'Edit', edit_invoice_stock_path(@invoice_stock) %> |
-<%= link_to 'Back', invoice_stocks_path %>
