--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -21,7 +21,17 @@
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+      <tr>
+        <td></td>
+        <td></td>
+        <td><h3><%= number_to_currency(@price_total) %></h3></td>
+      </tr>
+
+
+
   </tbody>
 </table>
+
+                
 
 <br>
