--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -16,9 +16,14 @@
   </div>
  
   <div class=" col-md-2">
-    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control  quantity "}  %>
+    <%= f.input :price_cost, label: false, as: :string, :input_html => {:class => "form-control "}  %>
   </div>
-  
+
+
+  <div class=" col-md-2">
+    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control "}  %>
+  </div>
+
   <div class="col-md-2">
             <%= f.input :supplier_id, label: false do %>
                <%= f.collection_select :supplier_id,  Supplier.order(:name), :id, :name, class: "form-control", label: false %>
