--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -29,6 +29,7 @@
         <div class=" col-md-12  panel-heading">
           <div class="col-md-4 text-center">Producto</div>
           <div class="col-md-2 text-center">Cantidad</div>
+          <div class="col-md-1 text-center">Desc.</div>
           <div class="col-md-2 text-center">Precio Unit</div>
           <div class="col-md-2 text-center">Precio Total</div>
         </div>
