--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -12,7 +12,10 @@
 
   </div>
   <div class=" col-md-2">
-    <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control  quantity "}  %>
+    <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
+  </div>
+  <div class=" col-md-1">
+    <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount"}  %>
   </div>
   <div class="col-md-2">
     <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control-static price_unit "}  %>
