--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,6 +1,12 @@
+  <div class="col-md-12"> 
+  <div class="form-group">
+    <div class="col-md-2 sidebar">
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-md-8 customer">
+          
 <h1>Listado de Remitos</h1>
-
-<table class="table">
+          <table class="table">
   <thead>
     <tr>
       <th>#</th>
@@ -32,6 +38,9 @@
   </tbody>
 </table>
 
-                
+</div>                
+</div>                
+</div>                
+</div>                
 
 <br>
