--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,6 +1,9 @@
   <div class="col-md-12"> 
   <div class="form-group">
     <div class="col-md-2 sidebar">
+  
+      <%= render :partial => 'filters_bar' %>
+    
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="col-md-8 customer">
