--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -22,6 +22,7 @@
           <li><%= link_to "Stock", invoice_stocks_path %></a></li>
           <li><%= link_to "Proveedor", suppliers_path %></a></li>
           <li><%= link_to "Remitos", invoices_path %></li>
+          <li><%= link_to "Categorias", categories_path %></li>
         </ul>
 
         <li><%= link_to "Remitos", new_invoice_path %></li>
