--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,8 +1,8 @@
  <div class="col-md-12 line2">
 
   <div class="col-md-4">
-        <%= f.input( :name, label: false,  input_html: {
-                 class: 'form-control ',
+    <%= f.input( :name, label: false, :autofocus => true, input_html: {
+                 class: 'form-control name ',
                  data: {'autocomplete-field' => true,
                         'autocomplete-for' => '#invoice_orders_#{id}_article_id',
                         'autocomplete-url' => articles_path(format: :json)
