--- a/app/views/customers/find.html.erb
+++ b/app/views/customers/find.html.erb
@@ -15,6 +15,7 @@
     <td><%= invoice.created_at.strftime("%d/%m/%Y") %></td>
     <td><%= invoice.price_total %></td>
     <td></td>
+    <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
     </tr>
 <% end %>
     
