--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,9 +25,13 @@
 
       </div>
     <% end %>
+    <br>
+<div>
+      <%= link_to 'Nuevo Articulo', new_article_path %>
+</div>
 
     </div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
 
       <div>
         <% if flash[:error] %>
@@ -63,9 +67,8 @@
               <td><%= article.supplier_id %></td>
               <td><%= number_to_currency(article.price_total) %></td>
               <td><%= article.quantity %></td>
-              <td><%= link_to 'Show', article %></td>
-              <td><%= link_to 'Edit', edit_article_path(article) %></td>
-              <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
+              <td><%= link_to 'Editar', edit_article_path(article) %></td>
+              <td><%= link_to 'Eliminar', article, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
             <% end %>
             </tr>
             </tbody>
@@ -73,7 +76,7 @@
         </div>
       <% end %>
       </div>
-      <%= link_to 'Nuevo Articulo', new_article_path %>
+
     </div>
   </div>
 </div>
