--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -23,8 +23,9 @@
   <div class=" col-md-2   ">
     <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
   </div>
-    <div class="col-md-1">
-     <%= f.hidden_field :_destroy %>
-   </div>
+  <div class="col-md-1">
+    <%= f.hidden_field :_destroy %>
+    <%= link_to "Elim.", "#", class: "remove_fields_orders btn btn-danger form-control" %>
+  </div>
 
 </div>
