--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,7 +8,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Sistema</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,19 +18,18 @@
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuracion<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li><%= link_to "Stock", invoice_stocks_path %></a></li>
-          <li><%= link_to "Proveedor", suppliers_path %></a></li>
+          <li><%= link_to "Stock", invoice_stocks_path %></li>
+          <li><%= link_to "Proveedor", suppliers_path %></li>
           <li><%= link_to "Remitos", invoices_path %></li>
           <li><%= link_to "Categorias", categories_path %></li>
         </ul>
 
         <li><%= link_to "Remitos", new_invoice_path %></li>
         <li><%= link_to "Caja Diaria", invoices_path %></li>
-        </li>
 
-          <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 
-    </ul>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
