--- a/app/views/invoice_stocks/_form.html.erb
+++ b/app/views/invoice_stocks/_form.html.erb
@@ -33,6 +33,9 @@
   </div>
 <% end %>
 
+    <div>
+      <%= f.input :price_total, label: "Precio Total" , as: :string %>
+    </div>
 </div> 
 </div>
 
