--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -16,7 +16,7 @@
   </div>
  
   <div class=" col-md-2">
-    <%= f.input :price_cost, label: false, as: :string, :input_html => {:class => "form-control "}  %>
+    <%= f.input :price_cost, label: false, as: :string, :input_html => {:class => "form-control price_cost_stock "}  %>
   </div>
 
 
