--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -18,7 +18,7 @@
     <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount"}  %>
   </div>
   <div class="col-md-2">
-    <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control-static price_unit "}  %>
+    <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control-static price_unit price_unit_add "}  %>
   </div>
   <div class=" col-md-2   ">
     <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"} %>
