--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing invoice</h1>
+<div class="col-md-12"> 
+  <div class="form-group">
+    <div class="col-md-2 sidebar">
 
-<%= render 'form' %>
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <div class="col-md-12 customer">
+        <h1>Editar  Remito</h1>
+        <%= render 'form' %>
 
-<%= link_to 'Show', @invoice %> |
-<%= link_to 'Back', invoices_path %>
+      </div>
+    </div>
+  </div>
+</div>
