arregloes invoices stock

--- a/app/views/invoice_stocks/_form.html.erb
+++ b/app/views/invoice_stocks/_form.html.erb
@@ -19,10 +19,11 @@
       <div class="row panel panel-default">
         <div class=" col-md-12  panel-heading">
           <div class="col-md-4 text-center">Producto</div>
-          <div class="col-md-2 text-center">Cantidad</div>
-          <div class="col-md-2 text-center">Precio Costo</div>
+          <div class="col-md-1 text-center">Cantidad</div>
+          <div class="col-md-1 text-center">Precio Costo</div>
           <div class="col-md-2 text-center">Fecha Vto</div>
           <div class="col-md-2 text-center">Proveedor</div>
+          <div class="col-md-2 text-center">Precio sub</div>
         </div>
 
 <div class="col-md-12 line3 panel-body">
