--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -25,7 +25,7 @@
         </ul>
 
         <li><%= link_to "Remitos", new_invoice_path %></li>
-        <li><%= link_to "Caja Diaria", invoices_path %></li>
+        <li><%= link_to "Caja Diaria", accounting_records_path %></li>
 
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 
