--- a/app/views/accounting_records/_form.html.erb
+++ b/app/views/accounting_records/_form.html.erb
@@ -9,13 +9,13 @@
           <%=f.input :detail, label: "Detalle", input_html: {class: "form-control" }  %>
         </div>
         <div class="field">
-          <%= f.input :debit, label: "Ingreso" , input_html: {class: "form-control" } %><br>
+          <%= f.input :credit, label: "Ingreso" , input_html: {class: "form-control" }, as: :string %><br>
         </div>
         <div class="field">
-          <%= f.input :credit , label: "Egreso",  input_html: {class: "form-control" } %><br>
+          <%= f.input :debit , label: "Egreso",  input_html: {class: "form-control" }, as: :string %><br>
         </div>
         <div class="actions">
-          <%= f.submit %>
+          <%= f.submit "Guardar", class: "btn btn-primary" %>
         </div>
       </div>
     </div>
