--- a/app/views/accounting_records/edit.html.erb
+++ b/app/views/accounting_records/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing accounting_record</h1>
+<div class="col-md-12"> 
+  <div class="form-group">
+    <div class="col-md-2 sidebar">
 
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <div class="col-md-12 customer">
+<h1>Editar Registro</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @accounting_record %> |
-<%= link_to 'Back', accounting_records_path %>
+</div>
+</div>
+</div>
+</div>
