--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -14,8 +14,8 @@
   <thead>
     <tr>
       <th>Detalle</th>
-      <th>Debito</th>
-      <th>Credito</th>
+      <th>Ingreso</th>
+      <th>Egreso</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,8 +24,8 @@
     <% @accounting_records.each do |accounting_record| %>
       <tr>
         <td><%= accounting_record.detail %></td>
-        <td><%= number_to_currency(accounting_record.debit) %></td>
         <td><%= number_to_currency(accounting_record.credit) %></td>
+        <td><%= number_to_currency(accounting_record.debit) %></td>
         <td><%= link_to 'Editar', edit_accounting_record_path(accounting_record) %></td>
         <td><%= link_to 'Eliminar', accounting_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
