--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,43 @@
+<div class="container-fluid">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Menu de Navegacion</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+      <%= render :partial => 'filters_bar' %>
+      </div>
+    <br>
+<div>
+      <%= link_to 'Nuevo Articulo', new_article_path %>
+</div>
+
+    </div>
+    <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
+
+      <div>
+        <% if flash[:error] %>
+          <li class="alert alert-error"><%= flash[:error]  %></li>
+      <% end %>
+        <% if notice %>
+          <li class="alert alert-success"><%= notice  %></li>
+      <% end %>
+      </div>
 <h1>Listado de Categorias</h1>
 
 <table class="table">
   <thead>
     <tr>
+      <th>Id</th>
       <th>Nombre</th>
+      <th>Total</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,10 +45,9 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= category[0][0] %></td>
+        <td><%= category[0][1] %></td>
+        <td><%= category[1] %></td>
       </tr>
     <% end %>
   </tbody>
@@ -23,3 +56,7 @@
 <br>
 
 <%= link_to 'Nueva Categoria', new_category_path %>
+
+    </div>
+    </div>
+    </div>
