--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -47,7 +47,7 @@
       <tr>
         <td><%= category[0][0] %></td>
         <td><%= category[0][1] %></td>
-        <td><%= category[1] %></td>
+        <td><%= number_to_currency(category[1]) %></td>
       </tr>
     <% end %>
   </tbody>
