--- a/app/views/invoice_stocks/_form.html.erb
+++ b/app/views/invoice_stocks/_form.html.erb
@@ -22,7 +22,7 @@
           <div class="col-md-1 text-center">Cantidad</div>
           <div class="col-md-1 text-center">Precio Costo</div>
           <div class="col-md-2 text-center">Fecha Vto</div>
-          <div class="col-md-2 text-center">Proveedor</div>
+          <div class="col-md-2 text-center">Categoria</div>
           <div class="col-md-2 text-center">Precio sub</div>
         </div>
 
