--- a/app/views/current_accounts/new.html.erb
+++ b/app/views/current_accounts/new.html.erb
@@ -12,9 +12,12 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
     </div>
+
     <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
-      <h2>Editar Articulo</h2>
-      <%= render 'form' %>
-    </div>
-  </div>
+      <h1>Nuevo Pago</h1>
+
+<%= render 'form' %>
+
+</div>
+</div>
 </div>
