--- a/app/views/customers/find.html.erb
+++ b/app/views/customers/find.html.erb
@@ -1,33 +1,52 @@
+<div class="container-fluid">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Menu de Navegacion</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+    </div>
+    <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
+
+
 <h3>Listado de Remitos</h3>
 
 <table class="table">
+
+<%= will_paginate @customers %>
   <tr>
-    <th>Remito</th>
     <th>Fecha</th>
-    <th>Price total</th>
-    <th>Total</th>
+    <th>Detalle</th>
+    <th>Ingreso</th>
+    <th>Pago</th>
     <th></th>
   </tr>
 
-<% @customers.each do |invoice| %>
+<% @customers.each do |account| %>
   <tr>
-    <td><%= invoice.id %></td>
-    <td><%= invoice.created_at.strftime("%d/%m/%Y") %></td>
-    <td><%= invoice.price_total %></td>
+    <td><%= account.created_at.strftime("%d/%m/%Y") %></td>
+    <td><%= account.detail %></td>
+    <td><%= account.credit %></td>
+    <td><%= account.debit %></td>
     <td></td>
-    <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-    </tr>
+    <td><%= link_to 'Edit', edit_invoice_path(account) %></td>
+  </tr>
+  
 <% end %>
-    
-<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-  
-  
+  <tr>
+    <td></td>
+    <td></td>
+    <td><%= number_to_currency(@subtotal[:credit])  %></td>
+    <td><%= number_to_currency(@subtotal[:debit])  %></td>
+    <td><%= number_to_currency(@total)  %></td>
+  </tr>
   </table>
-
-<br />
-
+    </div>
+    </div>
+    </div>
