--- a/app/views/customers/find.html.erb
+++ b/app/views/customers/find.html.erb
@@ -25,17 +25,15 @@
     <th>Detalle</th>
     <th>Ingreso</th>
     <th>Pago</th>
-    <th></th>
   </tr>
 
 <% @customers.each do |account| %>
   <tr>
     <td><%= account.created_at.strftime("%d/%m/%Y") %></td>
-    <td><%= account.detail %></td>
+    <td><%= link_to account.detail, edit_invoice_path(account.invoice_id) if !account.invoice_id.nil?%></td>
     <td><%= account.credit %></td>
     <td><%= account.debit %></td>
-    <td></td>
-    <td><%= link_to 'Edit', edit_invoice_path(account) %></td>
+    <td><%= account.invoice_id %></td>
   </tr>
   
 <% end %>
