--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -1,13 +1,13 @@
  <div class="col-md-12 line3">
 
   <div class="col-md-4">
-        <%= f.input( :name, label: false,  input_html: {
+        <%= f.input :article, label: false,  input_html: {
                  class: 'form-control ',
                  data: {'autocomplete-field' => true,
                         'autocomplete-for' => '#invoice_stock_stocks_#{id}_article_id',
                         'autocomplete-url' => articles_path(format: :json)
               } 
-              }) %>
+              } %>
          <%= f.input :article_id, :input_html => {class: 'form-control'} , as: :hidden,  label: false%>
 
   </div>
