--- a/app/views/invoice_stocks/edit.html.erb
+++ b/app/views/invoice_stocks/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing invoice_stock</h1>
+<div class="col-md-12"> 
+  <div class="form-group">
+    <div class="col-md-2 sidebar">
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+      <div >
 
-<%= render 'form' %>
+        <h1>Editar </h1>
 
-<%= link_to 'Show', @invoice_stock %> |
-<%= link_to 'Back', invoice_stocks_path %>
+        <%= render 'form' %>
+
+      </div>
+    </div>
+  </div>
+</div>
