--- a/app/views/invoice_stocks/index.html.erb
+++ b/app/views/invoice_stocks/index.html.erb
@@ -22,7 +22,7 @@
     <% @invoice_stocks.each do |invoice_stock| %>
       <tr>
         <td><%= invoice_stock.name %></td>
-        <td><%= link_to 'Show', invoice_stock %></td>
+        <td><%= link_to 'Editar', edit_invoice_stock_path(invoice_stock) %></td>
         <td><%= link_to 'Destroy', invoice_stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
