--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -13,8 +13,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Clientes", customers_path %></li>
+     <%  if current_user.role == 'admin' %>
+       <li><%= link_to "Clientes", customers_path %></li>
+     <% end %>
         <li><%= link_to "Articulos", articles_path %></li>
+     <%  if current_user.role == 'admin' %>
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuracion<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
@@ -23,10 +26,12 @@
           <li><%= link_to "Remitos", invoices_path %></li>
           <li><%= link_to "Categorias", categories_path %></li>
         </ul>
-
+      <% end %>
         <li><%= link_to "Remitos", new_invoice_path %></li>
-        <li><%= link_to "Caja Diaria", accounting_records_path %></li>
 
+     <%  if current_user.role == 'admin' %>
+        <li><%= link_to "Caja Diaria", accounting_records_path %></li>
+      <% end %>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 
       </ul>
