--- a/app/views/invoice_stocks/index.html.erb
+++ b/app/views/invoice_stocks/index.html.erb
@@ -13,6 +13,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th>Fecha</th>
       <th>Nombre</th>
       <th colspan="3"></th>
     </tr>
@@ -21,6 +22,7 @@
   <tbody>
     <% @invoice_stocks.each do |invoice_stock| %>
       <tr>
+        <td><%= l invoice_stock.created_at, format: :long %></td>
         <td><%= invoice_stock.name %></td>
         <td><%= link_to 'Editar', edit_invoice_stock_path(invoice_stock) %></td>
         <td><%= link_to 'Destroy', invoice_stock, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -32,8 +34,6 @@
 <br>
 
 <%= link_to 'Nuevo Remito', new_invoice_stock_path %>
-
-
 
 </div>                
 </div>                
