--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -13,7 +13,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-     <%  if current_user.role == 'admin' %>
+     <% if current_user.role == 'admin' %>
        <li><%= link_to "Clientes", customers_path %></li>
      <% end %>
         <li><%= link_to "Articulos", articles_path %></li>
@@ -25,6 +25,7 @@
           <li><%= link_to "Proveedor", suppliers_path %></li>
           <li><%= link_to "Remitos", invoices_path %></li>
           <li><%= link_to "Categorias", categories_path %></li>
+          <li><%= link_to "Usuarios", users_path %></li>
         </ul>
       <% end %>
         <li><%= link_to "Remitos", new_invoice_path %></li>
