--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,8 +13,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
     </div>
     <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
-      
-      <h1>Nuevo Cliente</h1>
+      <h2>Nuevo Usuario</h2>
       <%= render 'form' %>
     </div>
   </div>
