--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,9 +13,12 @@
     <div class="col-sm-3 col-md-2 sidebar">
     </div>
     <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
-      
-      <h1>Nuevo Cliente</h1>
-      <%= render 'form' %>
+      <h2> Usuario</h2>
+        <div>
+          Nombre: 
+          <%=@user.name  %>
+        </div>  
     </div>
   </div>
 </div>
+
