--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -18,8 +18,8 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Nombre</th>
-      <th>Apellido</th>
+      <th><%= Customer.human_attribute_name(:name) %></th>
+      <th><%= Customer.human_attribute_name(:lastname) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
