--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -33,7 +33,7 @@
      <%  if current_user.role == 'admin' %>
         <li><%= link_to "Caja Diaria", accounting_records_path %></li>
       <% end %>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
