--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -40,6 +40,7 @@
 
         <div>
           <h4>Total de Caja: <%= number_to_currency(@caja_total) %></h3>
+          <h4>Total de Ganancia: <%= number_to_currency(@earnings) %></h3>
         </div>
 <%= link_to 'Nuevo Registro', new_accounting_record_path %>
 </div>
