--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -50,10 +50,10 @@
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>Nombre</th>
-                  <th>Proveedor</th>
-                  <th>Pricio Publico</th>
-                  <th>Stock</th>
+                  <th><%= Article.human_attribute_name(:name)%></th>
+                  <th><%= Article.human_attribute_name(:supplier)%></th>
+                  <th><%= Article.human_attribute_name(:price_total)%></th>
+                  <th><%= Article.human_attribute_name(:quantity)%></th>
                   <th colspan="3"></th>
                 </tr>
               </thead>
@@ -63,8 +63,8 @@
 
                     <td><%= article.id %></td>
                     <td><%= article.name %></td>
-                    <td><%= article.supplier_id %></td>
-                    <td><%= number_to_currency(article.price_total) %></td>
+                    <td><%= article.supplier.name if !article.supplier_id.nil?  %></td>
+                    <td><b><%= number_to_currency(article.price_total) %></b></td>
                     <td><%= article.quantity %></td>
                     <%if can? :update, @article %>
                       <td><%= link_to 'Editar', edit_article_path(article) %></td>
