--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,26 +1,13 @@
-<h2>Sign up</h2>
 <%= simple_form_for(@user) do |f| %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.label :password %><br />
-      <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
+  <%= f.input :name, input_html: { class:'form-control' } %>
+  <%= f.label :email %><br />
+  <%= f.email_field :email, autofocus: true %>
+  <%= f.label :password %><br />
+  <%= f.password_field :password, autocomplete: "off" %></div>
+  <%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div class="col-md-4">
-    <%= f.input :role, collection: User::ROLE,  input_html:{ class: 'form-control'} %>
-  </div>
-
-  <div class="col-md-8">
-    <%= f.input :name, input_html: { class:'form-control' } %>
-  </div>
-  
-  
-  <div><%= f.submit "Crear" %></div>
-
+  <%= f.input :role, collection: User::ROLE,  input_html:{ class: 'form-control'} %>
+  <%= f.submit "Crear" %>
 <% end %>
 
 
