--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -23,10 +23,10 @@
   <tbody>
     <% @accounting_records.each do |accounting_record| %>
       <tr>
-        <td><%= link_to accounting_record.detail, edit_invoice_path(accounting_record.invoice_id)  %>  </td>
+        <td><%= accounting_record.detail %> <%=link_to "( #{accounting_record.invoice_id} )", edit_invoice_path(accounting_record.invoice_id) if !accounting_record.invoice_id.nil?  %>  </td>
         <td><%= number_to_currency(accounting_record.credit) %></td>
         <td><%= number_to_currency(accounting_record.debit) %></td>
-        <td><%= link_to 'Editar', edit_accounting_record_path(accounting_record) %></td>
+        <td><%= link_to 'Editar', edit_accounting_record_path(accounting_record) if accounting_record.present?%></td>
         <td><%= link_to 'Eliminar', accounting_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
