--- a/app/views/customers/find.html.erb
+++ b/app/views/customers/find.html.erb
@@ -29,7 +29,7 @@
 
 <% @customers.each do |account| %>
   <tr>
-    <td><%= l account.created_at, format: :long %></td>
+    <td><%= account.created_at %></td>
     <td><%= link_to account.detail, edit_invoice_path(account.invoice_id) if !account.invoice_id.nil?%></td>
     <td><%= account.credit %></td>
     <td><%= account.debit %></td>
