cambios en accouting record

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="form-actions col-md-4">
-    <%= f.submit "Guardar", class: 'btn btn-primary' %>
+    <%= f.button :submit , class: 'btn btn-primary' %>
   </div>
 
 </div>
