--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -21,7 +21,8 @@
 
 
   <div class=" col-md-2">
-    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control due_date "}  %>
+        
+    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control  datepicker "}  %>
   </div>
 
   <div class="col-md-2">
@@ -34,7 +35,6 @@
      <%= f.input :price_total, label: false, as: :string, input_html: {class: "form-control price_subtotal"} %>
   
 </div>
-
 
 
 
