--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -14,6 +14,8 @@
             <th>Detalle</th>
             <th>Ingreso</th>
             <th>Egreso</th>
+            <th>Usuario</th>
+
             <th colspan="3"></th>
           </tr>
         </thead>
@@ -23,6 +25,7 @@
               <td><%= accounting_record.detail %> <%=link_to "( #{accounting_record.invoice_id} )", edit_invoice_path(accounting_record.invoice_id) if !accounting_record.invoice_id.nil?  %>  </td>
               <td><%= number_to_currency(accounting_record.credit) %></td>
               <td><%= number_to_currency(accounting_record.debit) %></td>
+              <td><%= accounting_record.user.username %></td>
               <td><%= link_to 'Editar', edit_accounting_record_path(accounting_record) if accounting_record.present?%></td>
               <td><%= link_to 'Eliminar', accounting_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
