--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -30,11 +30,14 @@
               <td><%= link_to 'Eliminar', accounting_record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
           <% end %>
+
+       <% if current_user.role == 'admin' %>
           <tr>
             <td></td>
             <td><%= number_to_currency(@credit) %></td>
             <td><%= number_to_currency(@debit) %></td>
           </tr>
+        <% end %>
         </tbody>
       </table>
       
