--- a/app/views/accounting_records/daily_report.html.erb
+++ b/app/views/accounting_records/daily_report.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
       <div class="col-md-12 customer">
-        <h1>Nuholaa</h1>
+        <h1>Reporte Diario</h1>
 
         <% @accounting_users.each do |a|%>
-          <%= a[0]["name"]%> -  <%=a[1]  %> <br>
+          <%= a[0]["name"]%> -  <%= number_to_currency(a[1])  %> <br>
         <% end %>
 
       </div>
