--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,11 +1,9 @@
 <div class="col-md-12"> 
   <div class="form-group">
-    <div class="col-md-2 sidebar">
 
       <%= render :partial => 'filters_bar' %>
 
-    </div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <div class="col-sm-9 col-md-10  main">
       <div class="col-md-8 customer">
 
         <h1>Listado de Remitos</h1>
@@ -30,7 +28,7 @@
             <td><%= number_to_currency(invoice.price_total) %></td>
             <td><%= link_to 'Show', invoice %></td>
             <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-            <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
           </tr>
         <% end %>
           <tr>
@@ -40,7 +38,6 @@
           </tr>
           </tbody>
         </table>
-
         <div>
           <h4>Subtotal de Caja: <%= number_to_currency(@price_total) %></h3>
           <h4>Total de Caja: <%= number_to_currency(@caja) %></h3>
