--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,55 +1,18 @@
-<div class="container-fluid">
-<div class="navbar-header">
-  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-    <span class="sr-only">Menu de Navegacion</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
-</div>
-</div>
-
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-sm-3 col-md-2 sidebar">
-      <%= simple_form_for '', method: 'get' do |f| %>
-        
-        <div>
-          <%= f.input :supplier_id, label: 'Proveedor ' do %><br>
-            <%= f.collection_select :supplier_id,  Supplier.order(:name), :id, :name, class: "form-control", label: false, prompt: "Seleccione un provee" %>
-          <% end  %>
-        </div>
-        
-        
-        <div class="articulox">
-          <%= f.input( :q, label: 'Articulos', required: false,  input_html: {
-            class: 'form-control',
-            data: {'autocomplete-field' => true,
-                   'autocomplete-for' => '#_article_id',
-                   'autocomplete-url' => articles_path(format: :json)
-          } 
-          }) %>
-        <%= f.input :article_id, as: :hidden%>
+    <div class="col-md-12">
 
+      <section class="search-form ">
+
+        <div class="col-md-12">
+          <h2 class="col-md-4" >Listado de Articulos</h2>
+          <%= link_to 'Nuevo Articulo', new_article_path, class: " btn btn-success col-md-3 pull-right btn-responsive" %>
         </div>
 
-        <div>
-           <%= f.submit "Buscar"%>
+        <%= render "filter" %>
 
-        </div>
-        <div>
-          <%= link_to "Descargar ", articles_path(format: "xls"), :class =>'btn' %>
-        </div>
+      </section>
 
-      <% end %>
-      <br>
-      <div>
-        <%= link_to 'Nuevo Articulo', new_article_path %>
-      </div>
-      <div>
-      </div>
-    </div>
-    <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
       <div>
         <% if flash[:error] %>
           <div class="alert alert-error "><%= flash[:error]  %></div>
@@ -58,45 +21,48 @@
           <div class="alert alert-success "><%= notice  %></div>
         <% end %>
       </div>
-      <h1 class="page-header">Listado de Articulos</h1>
 
-      <div class="table-responsive">
-        <%= will_paginate @articles %>
-        <% if @articles %>
-          <div class="table-responsive">
-            <table class="table table-striped">
+
+      <%= will_paginate @articles%>
+
+      <div>
+
+      </div>
+      <% if @articles %>
+        <div>
+          <div class="tabla-responsive">
+            <table class="table table-striped table-hover">
               <thead>
                 <tr>
-                  <th>#</th>
+                 <th></th>
+                  <th class="hidden-phone hidden-table">#</th>
                   <th><%= Article.human_attribute_name(:name)%></th>
-                  <th><%= Article.human_attribute_name(:supplier)%></th>
+                  <th class="hidden-phone hidden-table"><%= Article.human_attribute_name(:supplier)%></th>
                   <th><%= Article.human_attribute_name(:price_total)%></th>
-                  <th><%= Article.human_attribute_name(:quantity)%></th>
-                  <th colspan="3"></th>
+                  <th class="hidden-phone hidden-table"><%= Article.human_attribute_name(:quantity)%></th>
+                  <th colspan="2" class="hidden-phone hidden-table"></th>
                 </tr>
               </thead>
               <tbody>
                 <% @articles.each do |article| %>
                   <tr>
-
-                    <td><%= article.id %></td>
+                    <td><%= image_tag article.image.url(:small) %></td>
+                    <td class="hidden-phone hidden-table"><%= article.id %></td>
                     <td><%= article.name %></td>
-                    <td><%= article.supplier.name if !article.supplier_id.nil?  %></td>
+                    <td class="hidden-phone hidden-table"><%= article.supplier.name  if !article.supplier_id.nil?  %></td>
                     <td><b><%= number_to_currency(article.price_total) %></b></td>
-                    <td><%= article.quantity %></td>
+                    <td class="hidden-phone hidden-table"><%= article.quantity %></td>
                     <%if can? :edit, @article %>
-                      <td><%= link_to 'Editar', edit_article_path(article) %></td>
-                      <td><%= link_to 'Eliminar', article, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
+                      <td class="hidden-phone hidden-table"><%= link_to 'Editar', edit_article_path(article ) %></td>
+                      <td class="hidden-phone hidden-table"><%= link_to 'Eliminar', article, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
                     <% end %>
                   <% end %>
                   </tr>
               </tbody>
             </table>
           </div>
-        <% end %>
-      </div>
-
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
-
