--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,49 +1,37 @@
-<%= simple_form_for @invoice, defaults: {input_html:{class: 'form-inline'}} do |f| %>
-  <div class="col-md-8 customer ">
-    <%= f.input :customer_id, as: :hidden %>
-    <%= f.input :customer_name, as: :autocomplete, label: "Cliente:",
-      url: autocomplete_customer_name_invoices_path, 
-      input_html: {'data-id-element' => '#invoice_customer_id', class: 'form-control'}
-    %>
+<div class="row">
+  <div class="col-md-12">
 
-</div>
-<div class="container-fluid">
+    <%= simple_form_for @invoice, defaults: {input_html:{class: 'form-inline'}} do |f| %>
+      <div class="customer ">
+        <%= f.input :customer_id, as: :hidden %>
+        <%= f.input :customer_name, as: :autocomplete, label: false,
+          url: autocomplete_customer_name_invoices_path,
+          placeholder: 'Ingrese el cliente',
+          input_html: {'data-id-element' => '#invoice_customer_id', class: 'form-control'}
+        %>
+      <%= simple_form_for '', method: 'get' do |s| %>
+    <% end %>
 
-  <div class=" row panel panel-default">
-    <div class="col-md-12  panel-heading">
-      <table class="line1">
-        <thead>
-          <tr>
-            <th class="col-md-6">Producto</th>
-            <th>Cantidad</th>
-            <th>Desc</th>
-            <th>Precio Unit</th>
-            <th>Precio Total</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
+    <div class="form-group line1">
+      <div class="hidden-phone col-sm-3 col-md-4 col-lg-4 bold"> Producto</div>
+      <div class="hidden-phone col-sm-2 col-md-2 col-lg-2"> Cantidad</div>
+      <div class="hidden-phone col-sm-2 col-md-2 col-lg-2"> Precio U.</div>
+      <div class="hidden-phone col-sm-2 col-md-2 col-lg-3"> Precio T.</div>
 
-          <%= f.fields_for :orders, method: 'get' do |ph| %>
-            <%=render 'orders', f: ph  %>
-          <% end %>
-          <tr><td colspan="6"><%= link_to_add_fields 'Agregar  Producto' , f , :orders, class: "add_fields" %></td></tr>
+      <%= f.fields_for :orders, method: 'get' do |ph| %>
+        <%=render 'orders', f: ph  %>
+      <% end %>
 
-        </tbody>
-      </table>
-    </div> 
-  </div>
-  <div class =" total_1 pull-right col-md-4">
-    <div class="col-md-4">
-      <h4> <b>Total: $ </b></h4>
-    </div>
-    <div class="col-md-6 ">
-      <b><%= f.input :price_total, label: false, :input_html=> {class: "form-control inline "}, readonly: true, as: :string %></b>
+      <%= link_to_add_fields 'Agregar  Producto' , f , :orders, class: "add_fields col-md-12" %>
+
+      <%= render "total", f: f %>
+
+      <div class="form-actions col-md-12">
+        <%= f.button :submit , class: 'btn btn-primary' , data: {disable_with: "Enviando"} %>
+      </div>
     </div>
   </div>
-  <div class="form-actions col-md-4">
-    <%= f.submit  class: 'btn btn-primary', 'data-disable-with' => 'Guardando...' %>
+    <% end %>
   </div>
-
 </div>
-<% end %>
+
