--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid cfnav">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
       <span class="sr-only">Menu de Navegacion</span>
@@ -13,41 +13,43 @@
     <div class="col-sm-3 col-md-2 sidebar">
     </div>
     <div class="col-sm-offset-2 col-md-8 col-md-offset-3">
-      <h1>REMITO</h1>
+      <h3>REMITO</h3>
 
 <b>Cliente:</b>
 <%= @invoice.customer_id %>
-<div>
-  <div class="row panel panel-default">
-    <div class=" col-xs-12 panel-heading small">
-      <div class="col-xs-1 col-md-1 text-center">Cantidad</div>
-      <div class="col-xs-5 col-md-5 text-center">Articles</div>
-      <div class="col-xs-2 col-md-2 text-center">Precio Unit</div>
-      <div class="col-xs-2 col-md-2 text-center">Descuento</div>
-      <div class="col-xs-2 col-md-2 text-center">Precio Total</div>
-    </div>
-    <div class="panel-body small col-md-8">
-      <%  @invoice.orders.each do |order|%>
-        <div class="col-xs-1 col-md-1"><%= order.quantity%></div>
-        <div class="col-md-5 col-xs-5"><%= order.article.name %></div>
-        <div class="col-md-2 col-xs-2"><%= order.price_unit%></div>
-        <div class="col-md-2 col-xs-2"><%= order.discount%></div>
-        <div class="col-md-2 col-xs-2"><%= order.price_total%></div>
-      <%end %>
-    </div>
-  </div>
 
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th class=col-sm-offset-2>Cantidad</th>
+      <th class=col-sm-offset-10>Articulo</th>
+      <th>Precio Unit</th>
+      <th>Descuento</th>
+      <th>Precio Total</th>
+    </tr>
+  </thead>
+  <tbody>
+      <%  @invoice.orders.each do |order|%>
+      <tr>
+        <td><%= order.quantity%></td>
+        <td><%= order.article.name %></td>
+        <td><%= order.price_unit%></td>
+        <td><%= order.discount%></td>
+        <td><%= order.price_total%></td>
+      </tr>
+      <%end %>
+  </tbody>
+</table>
+
+  <div>
+    <h1> <a href="" id="printOut" class="btn btn-primary hidden-print">Imprimir</a></h1>
+  </div>
 </div>
 <p>
 <b>Precio total: $</b>
 <%= @invoice.price_total %>
 </p>
-<div>
 
-    <a href="" id="printOut" class=" btn btn-primary hidden-print">Imprimir</a>
-    <%= link_to "Editar", edit_invoice_path(@invoice.id), class: "btn btn-primary"   %>
-</div>
-    
-    </div>
 </div>
 </div>
