--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,18 +1,19 @@
-<nav class="navbar navbar-default" role="navigation">
-<div class="container-fluid">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<div class="navbar navbar-default ">
+  <div class="navbar-header"> 
+
+    <button type="button" class="navbar-toggle " data-toggle="collapse" data-target="#acollapse">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <a href="." class="navbar-brand">Linecodex</a>
   </div>
+  <!--<ul class="nav navbar-nav navbar-right">-->
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-    <ul class="nav navbar-nav">
+  <div id ="acollapse" class="collapse navbar-collapse" >
+    <ul class="nav navbar-nav  ">
+
       <% if current_user.role == 'admin' %>
       <li><%= link_to "Clientes", customers_path %></li>
     <% end %>
@@ -21,32 +22,21 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuracion<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li><%= link_to "Stock", invoice_stocks_path %></li>
-          <li><%= link_to "Proveedor", suppliers_path %></li>
-          <li><%= link_to "Remitos", invoices_path %></li>
-          <li><%= link_to "Categorias", categories_path %></li>
-          <li><%= link_to "Usuarios", users_path %></li>
-          <li><%= link_to "Vencimientos", due_date_articles_path %></li>
+          <li class="nav"><%= link_to "Stock", invoice_stocks_path %></li>
+          <li class="nav"><%= link_to "Proveedor", suppliers_path %></li>
+          <li class="nav"><%= link_to "Remitos", invoices_path %></li>
+          <li class="nav"><%= link_to "Categorias", categories_path %></li>
+          <li class="nav"><%= link_to "Usuarios", users_path %></li>
+          <li class="nav"><%= link_to "Vencimientos", due_date_articles_path %></li>
         </ul>
       <% end %>
-      <li><%= link_to "Remitos", new_invoice_path %></li>
-
-      <li><%= link_to "Caja Diaria", accounting_records_path %></li>
-
-  </div><!-- /.navbar-collapse -->
-  <div>
-
-    <li class="dropdown">
-
-      <ul class="pull-right" >
-        <li ><%= link_to "Cerrar Session", destroy_user_session_path, method: :delete %></li>
-        <li ><%= link_to current_user.email, edit_user_path(current_user) %></li>
-      </ul>
-    </li>
-  </div>
+      <li class="nav"><%= link_to "Remitos", new_invoice_path %></li>
+      <li class="nav"><%= link_to "Caja Diaria", accounting_records_path %></li>
 
     </ul>
-
-
-</div><!-- /.container-fluid -->
-</nav>
+    <ul class="nav navbar-nav pull-right">
+      <li class="nav" ><%= link_to current_user.email, edit_user_path(current_user) %></li>
+      <li class="nav" ><%= link_to "Cerrar Session", destroy_user_session_path, method: :delete %></li>
+    </ul>
+  </div>
+</div>
