--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -44,6 +44,7 @@
             <% end  %>
 
             <%= f.input :allow_negative   %>
+            <%= f.input :allow_change_price   %>
             <%= f.input :minimum_stock, :input_html => {class: 'form-control'}  %>
             <%= f.input :quantity_package, :input_html => {class: 'form-control'}  %>
 
