--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -28,6 +28,8 @@
           <li class="nav"><%= link_to "Categorias", categories_path %></li>
           <li class="nav"><%= link_to "Usuarios", users_path %></li>
           <li class="nav"><%= link_to "Vencimientos", due_date_articles_path %></li>
+          <li class="nav"><%= link_to "Cantidad Minima", stock_path %></li>
+
         </ul>
       <% end %>
       <li class="nav"><%= link_to "Remitos", new_invoice_path %></li>
