--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -21,11 +21,11 @@
     <% end %>
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2">
-  <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control price_unit price_unit_add "}, placeholder: "Precio Unitario"  %>
+  <%= f.input :price_unit, label: false, as: :string, :input_html => {:class => "form-control price_unit price_unit_add "}, placeholder: "Precio Unitario", readonly: true  %>
   <%= f.input :price_original, as: :hidden, label: false,  :input_html => {:class => "form-control price_original "}  %>
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2">
-  <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"}, placeholder: "Precio Total" %>
+  <%= f.input :price_total, label: false, as: :string, :input_html => {:class => "form-control price_subtotal"}, placeholder: "Precio Total", readonly: true %>
   </div>
   <%= f.hidden_field :_destroy %>
   
